Fixing bugs.